Add release profile to pom.xml with Java 21 support and updated plugin configurations